[gd_scene load_steps=4 format=3 uid="uid://brd4ncj2g0yr8"]

[ext_resource type="Script" uid="uid://lkvogs6fvfn" path="res://script/hud.gd" id="1_5ysmq"]
[ext_resource type="Texture2D" uid="uid://dwpk2kagvovr8" path="res://assets/UI/blank_panel.png" id="2_6fi6k"]
[ext_resource type="Texture2D" uid="uid://ekx6s3ckllnb" path="res://assets/UI/full_heart.png" id="3_uo2fv"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ysmq")

[node name="heart_panel" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_6fi6k")

[node name="heart_1" type="Sprite2D" parent="."]
position = Vector2(-54, -9)
scale = Vector2(3, 3)
texture = ExtResource("3_uo2fv")

[node name="heart_2" type="Sprite2D" parent="."]
position = Vector2(-3, -9)
scale = Vector2(3, 3)
texture = ExtResource("3_uo2fv")

[node name="heart_3" type="Sprite2D" parent="."]
position = Vector2(48, -9)
scale = Vector2(3, 3)
texture = ExtResource("3_uo2fv")
